# trial_pkg

./: CMakeLists.txt  package.xml
src/: ceres_test.cpp
